@@ -2089,7 +2089,7 @@ CREATE TABLE poller_item (
   rrd_name varchar(19) NOT NULL default '',
   rrd_path varchar(255) NOT NULL default '',
   rrd_num tinyint(2) unsigned NOT NULL default '0',
-  rrd_step mediumint(8) unsigned NOT NULL default '300',
+  rrd_step mediumint(8) NOT NULL default '300',
   rrd_next_step mediumint(8) NOT NULL default '0',
   arg1 TEXT default NULL,
   arg2 varchar(255) default NULL,
