@@ -73,6 +73,7 @@ Cacti CHANGELOG
 -bug: Some users don't like the idea of automatic page refreshes
 -bug: Allow more rows to be visible in Cacti pages
 -bug: Ping and SNMP should test both conditions
+-bug: When step is less than poller interval, item will stop polling for long period of time
 -feature#0001289: Add "Graph Properties" wrench to tree+preview mode
 -feature#0001249: New pseudo CDEF variables for "Count All|Similar Data Sources (NO)?DUPS"
 -feature#0001250: Dispatching job in poller can lead to unbalanced threads 
